--- a/eclipse/settings/pom.xml
+++ b/eclipse/settings/pom.xml
@@ -3,8 +3,9 @@
 
   <parent>
     <groupId>com.google.cloud.tools.eclipse</groupId>
-    <artifactId>eclipse-setup</artifactId>
+    <artifactId>trunk</artifactId>
     <version>0.1.0-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
   <artifactId>eclipse-settings</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -27,5 +28,34 @@
         <artifactId>maven-jar-plugin</artifactId>
       </plugin>
     </plugins>
+    
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <versionRange>[2.6,)</versionRange>
+                    <goals>
+                      <goal>jar</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <execute/>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
