--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ env:
     - MAVEN_OPTS=-Xmx700m
     - CLOUDSDK_CORE_DISABLE_USAGE_REPORTING=true
     - DISPLAY=:99.0
-    - GCS_BUILD_BUCKET=gs://gcloud-eclipse-testing
+    - GCS_BUILD_BUCKET=gs://travis_artifacts
 before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
@@ -48,21 +48,21 @@ after_success:
   - if [ -d build/jacoco/target ]; then bash <(curl -s https://codecov.io/bash); fi
 after_script:
   # Upload build reports to our Google Cloud Storage bucket
-  - openssl aes-256-cbc -K $encrypted_42b011b17512_key -iv $encrypted_42b011b17512_iv
+  - openssl aes-256-cbc -K $encrypted_7e6c351b4cee_key -iv $encrypted_7e6c351b4cee_iv
       -in .travisci/travis-service-account.json.enc -out /tmp/travis-service-account.json -d
   - $CLOUD_SDK_HOME/bin/gcloud auth activate-service-account --key-file=/tmp/travis-service-account.json
   # Copy surefire-reports and screenshots
   - mkdir build-results && .travisci/copy-test-results.sh plugins build-results
-  ###- $CLOUD_SDK_HOME/bin/gsutil -m -q
-  ###    cp -r -z 'txt,xml,html' -a public-read
-  ###      build-results/*
-  ###      $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/${TRAVIS_JOB_NUMBER}-${TRAVIS_OS_NAME}/
+  - $CLOUD_SDK_HOME/bin/gsutil -m -q
+      cp -r -z 'txt,xml,html' -a public-read
+        build-results/*
+        $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/${TRAVIS_JOB_NUMBER}-${TRAVIS_OS_NAME}/
   # Copy build results (if successful; conditioned on jacoco as we ensure
   # jacoco is only performed for a single element of build matrix)
-  ###- if [ -d gcp-repo/target/repository -a -d build/jacoco/target ]; then
-  ###    $CLOUD_SDK_HOME/bin/gsutil -m -q
-  ###      cp -r -z 'txt,xml,html' -a public-read
-  ###        gcp-repo/target/repository
-  ###        $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/repository;
-  ###  fi
+  - if [ -d gcp-repo/target/repository -a -d build/jacoco/target ]; then
+      $CLOUD_SDK_HOME/bin/gsutil -m -q
+        cp -r -z 'txt,xml,html' -a public-read
+          gcp-repo/target/repository
+          $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/repository;
+    fi
 
