Only upload on team PRs

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,22 +48,25 @@ after_success:
   # test req'd as we don't run coverage on all elements of the matrix
   - if [ -d build/jacoco/target ]; then bash <(curl -s https://codecov.io/bash); fi
 after_script:
-  # Upload build reports to our Google Cloud Storage bucket
-  - openssl aes-256-cbc -K $encrypted_7e6c351b4cee_key -iv $encrypted_7e6c351b4cee_iv
-      -in .travisci/travis-service-account.json.enc -out /tmp/travis-service-account.json -d
-  - $CLOUD_SDK_HOME/bin/gcloud auth activate-service-account --key-file=/tmp/travis-service-account.json
-  # Copy surefire-reports and screenshots
-  - mkdir build-results && .travisci/copy-test-results.sh plugins build-results
-  - $CLOUD_SDK_HOME/bin/gsutil -m -q
-      cp -r -z 'txt,xml,html' -a public-read
-        build-results/*
-        $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/${TRAVIS_JOB_NUMBER}-${TRAVIS_OS_NAME}/
-  # Copy build results (if successful; conditioned on jacoco as we ensure
-  # jacoco is only performed for a single element of build matrix)
-  - if [ -d gcp-repo/target/repository -a -d build/jacoco/target ]; then
+  # Upload build reports to our Google Cloud Storage bucket (only available
+  # for team PRs).  This is done in two steps:
+  #   1. Copy surefire-reports and screenshots.
+  #   2. Copy build results (if successful). This step is conditioned
+  #      on jacoco as we already ensure jacoco is only performed
+  #      for a single element of the build matrix.
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      openssl aes-256-cbc -K $encrypted_7e6c351b4cee_key -iv $encrypted_7e6c351b4cee_iv
+        -in .travisci/travis-service-account.json.enc -out /tmp/travis-service-account.json -d;
+      $CLOUD_SDK_HOME/bin/gcloud auth activate-service-account --key-file=/tmp/travis-service-account.json
+      mkdir build-results && .travisci/copy-test-results.sh plugins build-results;
       $CLOUD_SDK_HOME/bin/gsutil -m -q
         cp -r -z 'txt,xml,html' -a public-read
-          gcp-repo/target/repository/*
-          $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/repository/;
+          build-results/*
+          $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/${TRAVIS_JOB_NUMBER}-${TRAVIS_OS_NAME}/;
+      if [ -d gcp-repo/target/repository -a -d build/jacoco/target ]; then
+        $CLOUD_SDK_HOME/bin/gsutil -m -q
+          cp -r -z 'txt,xml,html' -a public-read
+            gcp-repo/target/repository/*
+            $GCS_BUILD_BUCKET/travis/${TRAVIS_BUILD_NUMBER}/repository/;
+      fi;
     fi
-
